--- a/M1U2/ejercicio01.HTML
+++ b/M1U2/ejercicio01.HTML
@@ -56,5 +56,15 @@
                 <input type="submit" value="enviar">
             </p>
         </p>
+
 </body>
+
+<svg width="100" height="100">
+    <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="red"/>
+</svg>
+<body>
+    <audio src="JohnLennon.mp3" controls></audio>
+    <body>
+        <video src="videocursos.mp4" poster="cursos.jpg" controls></video>
+    </body>
 </html>
