--- a/M1U2/ejercicio01.HTML
+++ b/M1U2/ejercicio01.HTML
@@ -12,7 +12,7 @@
     <h2>La empresa</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium</p>
     <h2>investigacion de mercados</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. investigacion</p>
 
     <h2>a</h2>
     <ul></ul>
