--- a/M1U2/ejercicio01.HTML
+++ b/M1U2/ejercicio01.HTML
@@ -12,7 +12,7 @@
     <h2>La empresa</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium</p>
     <h2>investigacion de mercados</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. investigacion</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. investigacion y desarrollo</p>
 
     <h2>a</h2>
     <ul></ul>
@@ -58,13 +58,12 @@
         </p>
 
 </body>
-
 <svg width="100" height="100">
     <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="red"/>
 </svg>
 <body>
-    <audio src="JohnLennon.mp3" controls></audio>
+    <audio src="JohnLennon.mp3" controls>john</audio>
     <body>
-        <video src="videocursos.mp4" poster="cursos.jpg" controls></video>
+        <video src="videocursos.mp4" poster="cursos.jpg" controls>video</video>
     </body>
 </html>
