--- a/M1U2/ejercicio01.HTML
+++ b/M1U2/ejercicio01.HTML
@@ -16,16 +16,16 @@
 
     <h2>a</h2>
     <ul></ul>
-       <li>objetivos 1</li>
-       <li>objetivos 2</li>
-    <li>objetivos 3</li>
-    <li>objetivos 4</li>
+     <li>objetivos 1</li>
+     <li>objetivos 2</li>
+     <li>objetivos 3</li>
+     <li>objetivos 4</li>
 <ul></ul>
-<ol></ol>
+<ol>
 <li>tenes que</li>
 <li>tenes que</li>
 <li>tenes que</li>
-<ol></ol>
+</ol>
 <p>para mas info, hace <a href="https://sceu.frba.utn.edu.ar/e-learning/" target="_blank">click aca</a>
 <h2>imagenes</h2>
 <img src="mkt.jpg" alt="marketing"/>
@@ -57,7 +57,42 @@
             </p>
             <p></p>
         </p>
-
+<label for="sexo">sexo</label>
+<ul>
+    <li>
+        <input type="radio" name="sexo" value="hombre">
+        <label>hombre</label>
+    </li>
+    <li>
+        <input type="radio" name="sexo" value="mujer">
+        <label>mujer</label>
+    </li>
+    <ul>
+        <label>hobbies</label>
+    </ul>
+    <li>
+        <input type="checkbox" name="hobbies[]" value="bailar" id="bailar">
+        <label for="bailar">bailar</label>
+    </li>
+    <ul>
+        <p>
+            <label for="titulo">titulo</label>
+            <select name="titulo">
+                <option value="secundario">secundario</option>
+                <option value="terciario">terciario</option>
+                <option value="universitario">universitario</option>
+                <select>
+        </p>
+        <p>
+            <label for="comentarios">comentarios</label>
+            <textarea name="comentarios"></textarea>
+        </p>
+        <p>
+            <input type="submit" value="enviar">
+            <input type="reset" value="borrar">
+        </p>
+    </ul>
+</ul>
 </body>
 <svg width="100" height="100">
     <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="red"/>
