--- a/M1U3/ejemplo001.html
+++ b/M1U3/ejemplo001.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>modulo1unidad3</title>
-    <link rel="stylesheet" href="ejemplo01.css">
+    <link rel="stylesheet" href="ejemplo001.css">
 
 </head>
 
@@ -28,8 +28,30 @@
     </p>
 
     <div>
-
+<p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. At repellendus velit consectetur adipisci, quo 
+</p>
     </div>
+
+
+<div id="contenedor">
+    <div id="verde"> <span class="destacados">div de posic est1</span>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime deleniti repellat laborum dolorem dicta fuga nesciunt nostrum sapiente unde voluptas est accusantium, quae veritatis voluptatibus aperiam? Reprehenderit quasi est eos?
+    </div>
+    <div id="celeste"> div de posicionamiento estatico 2  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis harum dolore mollitia alias esse quibusdam perferendis, aliquam distinctio sequi. Rerum, eos recusandae nisi modi non amet nulla est voluptate assumenda.</div>
+<div id="amarillo"> div de posicionamiento estatico 3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ea aperiam, dicta ab ex quae eveniet tenetur rem? Tenetur, totam ullam. Deleniti consequatur nihil quo! Sequi deserunt molestias velit amet.</div>
+</div>
+
+<div class="contenedor">
+    <div class="item">caja 11</div>
+    <div class="item">caja 22</div>
+    <div class="item">caja 33</div>
+    <div class="item">caja 44</div>
+    <div class="item">caja 55</div>
+    <div class="item">caja 66</div>
+    <div class="item">caja 77</div>
+    <div class="item">caja 88</div>
+</div>
+
 </body>
 
 </html>
