--- a/M1U4/M1U4TAREA.html
+++ b/M1U4/M1U4TAREA.html
@@ -1,4 +1,4 @@
-<M1U4TAREA.html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,19 +7,19 @@
 </head>
 <body>
     <script>
-		var metros = 25000;
+		var metros = 35000;
 		var transporte = '';
 
 		if (metros > 0 && metros <= 1000) {
-			transporte = 'pie';
+			transporte = 'ir a pie';
 		} else if (metros > 1000 && metros <= 10000) {
-			transporte =  'bicicleta';
+			transporte =  'ir en bicicleta';
 		} else if (metros > 10000 && metros <= 30000) {
-			transporte =  'colectivo';
+			transporte =  'ir en colectivo';
 		} else if (metros > 30000 && metros <= 100000) {
-			transporte =  'auto';
+			transporte =  'ir en auto';
 		} else if (metros > 100000 ) {
-			transporte =  'avion';
+			transporte =  'ir en avion';
 		} 
 
 		console.log('Para ' + metros + ' metros recomendamos ir en ' + transporte);     
