--- a/M1U4/ejemplos/01 variables.html
+++ b/M1U4/ejemplos/01 variables.html
@@ -32,6 +32,10 @@
         document.write(casado); 
         </script>
         
+        <script>
+            console.log('hola curso ' + 10)
+        </script>
+
         <br/>
         <br/>
         
