--- a/M1U4/ejemplos/04 variable_array.html
+++ b/M1U4/ejemplos/04 variable_array.html
@@ -7,17 +7,24 @@
 
 <body>
 	<script>
-		var frutas = ["Manzana", "Banana"]
+		var frutas = ["Manzana", "Banana", "Pera", "Sandia"]
 
 			console.log(frutas.length);
 			console.log(frutas); // 2
-		
+		console.log(frutas[2])
+
 		var primero = frutas[0]; //manzana
+
+		var ultimo = frutas[frutas.length-1]
+
+console.log(ultimo)
 
 		var vegetales = ['Repollo', 'Nabo', 'Rábano', 'Zanahoria']
 		
 			console.log(vegetales);  // ["Repollo", "Nabo", "Rábano", "Zanahoria"]
 
+for(var i=0; i< vegetales.length; i++)
+console.log('tenemos' + vegetales[i])
 	</script>
 
 </body>
