--- a/M1U4/M1U4TAREA.html
+++ b/M1U4/M1U4TAREA.html
@@ -11,15 +11,15 @@
 		var transporte = '';
 
 		if (metros > 0 && metros <= 1000) {
-			transporte = 'ir a pie';
+			transporte = 'pie';
 		} else if (metros > 1000 && metros <= 10000) {
 			transporte =  'ir en bicicleta';
 		} else if (metros > 10000 && metros <= 30000) {
-			transporte =  'ir en colectivo';
+			transporte =  'colectivo';
 		} else if (metros > 30000 && metros <= 100000) {
-			transporte =  'ir en auto';
+			transporte =  'auto';
 		} else if (metros > 100000 ) {
-			transporte =  'ir en avion';
+			transporte =  'avion';
 		} 
 
 		console.log('Para ' + metros + ' metros recomendamos ir en ' + transporte);     
