--- a/M1U4/m1u4tarea2.html
+++ b/M1U4/m1u4tarea2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-		var numeros = [100, 56, 1245, 3, 89, 9];
+		var numeros = [100, -10, 1300, 56, 1245, 3, 89, 9];
 		
 		var mayor = 0;
 		for (var i = 0; i < numeros.length; i++) {
