--- a/M1U3/ejemplo001.html
+++ b/M1U3/ejemplo001.html
@@ -41,7 +41,7 @@
 <div id="amarillo"> div de posicionamiento estatico 3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ea aperiam, dicta ab ex quae eveniet tenetur rem? Tenetur, totam ullam. Deleniti consequatur nihil quo! Sequi deserunt molestias velit amet.</div>
 </div>
 
-<div class="contenedor">
+<div class="contenedor2">
     <div class="item">caja 11</div>
     <div class="item">caja 22</div>
     <div class="item">caja 33</div>
